ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Accessors/parserAccessors8/input.ts.stderr
error: A 'set' accessor must have exactly one parameter
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Accessors/parserAccessors8/input.ts:2:15
  |
2 | var v = { set foo() { } }
  |               ^^^

